# cpp_start

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.txt  github_action.yml  main.cpp  sonar-project.properties  test.cpp
.github/workflows/: advanced_build.yml  analyse.yml  analyze.yml  blank.yml  build.yml  main.yml
CMake/: build_utilities.cmake  cpp_starter.cmake  macros.cmake
CMake/compilerflags/: AppleClang.cmake  Clang.cmake  GNU.cmake  MSVC.cmake
CMake/git/: GetGitRevisionDescription.cmake
src/: Adder.cpp  Adder.h  AdderTest.cpp  CMakeLists.txt
src/adder/: Adder.cpp  Adder.h  CMakeLists.txt  test_adder.cpp
src/adder/bla/: Foo.cpp  Foo.h
src/boost_example/: Boost_example.cpp  Boost_example.h  CMakeLists.txt  test_boost_example.cpp
src/catch_example/: Adder.cpp  Adder.h  CMakeLists.txt  test_adder.cpp  test_catch_main.cpp
src/cuda_example/: CMakeLists.txt  Cuda_example.cpp  Cuda_example.cu  Cuda_example.h  kernel.cuh  test_cuda_example.cpp
src/cuda_example/device/: kernel.cu  kernel.cuh
src/info/: CMakeLists.txt  git.cmake  git.h  git.in.cpp  gitTest.cpp
src/meta/: CMakeLists.txt  meta.cmake  meta.h  meta.in.cpp  test_meta.cpp
src/mpi_example/: CMakeLists.txt  MPI_example.cpp  MPI_example.h  test_MPI_example.cpp
src/openmp_example/: CMakeLists.txt  OpenMP_example.cpp  OpenMP_example.h  test_OpenMP_example.cpp
